--- a/src/asset/theme/default.css
+++ b/src/asset/theme/default.css
@@ -1,4 +1,15 @@
-
+body{
+  width:100%;
+  height:100%;
+  background:url(../img/bg1.jpg) no-repeat;
+  background-size:cover;
+  color: #004779;
+  font-family: 宋体;
+  font-size: 12px;
+  margin-left: 1px;
+  margin-right: 1px;
+  margin-top: 0;
+}
 .custom  .login-form {
     position: absolute;
     top: 40%;
@@ -7,6 +18,8 @@
     width: 320px;
     height: 320px;
     padding: 36px;
+    background:rgba(43,43,54,.3);
+    border-radius:5px;
     -webkit-box-shadow: 0 0 100px rgba(0,0,0,.08);
     box-shadow: 0 0 100px rgba(0,0,0,.08);
   }
@@ -19,6 +32,25 @@
 
  .custom .ant-layout{
    line-height:1.15;
+ }
+ .header-top{
+  background: url(../img/top_head1_bg.gif) repeat-x scroll 0 0 transparent;
+  height: 64px;
+  margin: 0 auto;
+  width: 100%;
+  font-size:20px;
+  font-weight: bold;
+  color:#fff;
+  padding-left:30px;
+  line-height: 64px; 
+ }
+ .header-top1{
+  background: url(../img/top_head2_bg.gif) repeat-x scroll 0 0 transparent;
+  border-bottom: 1px solid #FFFFFF;
+  border-top: 1px solid #A0C6E1;
+  height: 36px;
+  margin: 0;
+  width: 100%;
  }
  .custom .logo{
     width: 240px;
