--- a/src/asset/theme/default.css
+++ b/src/asset/theme/default.css
@@ -30,41 +30,42 @@ body{
     width: 100%;
   }
 
- .custom .ant-layout{
-   line-height:1.15;
+ .custom .ant-layout-content{
+   background:#D8EDFC;
+   min-height:81vh;
+ } 
+ .custom .ant-layout-header{
+   background: url(../img/top_head1_bg.gif) repeat-x scroll 0 0 transparent;
+ }
+  
+ .custom .ant-menu-dark{
+   background: transparent;
+   border-bottom-color: transparent;
  }
  .header-top{
-  background: url(../img/top_head1_bg.gif) repeat-x scroll 0 0 transparent;
-  height: 64px;
-  margin: 0 auto;
-  width: 100%;
-  font-size:20px;
-  font-weight: bold;
-  color:#fff;
-  padding-left:30px;
-  line-height: 64px; 
- }
- .header-top1{
   background: url(../img/top_head2_bg.gif) repeat-x scroll 0 0 transparent;
   border-bottom: 1px solid #FFFFFF;
   border-top: 1px solid #A0C6E1;
   height: 36px;
+  line-height:36px;
+  padding-left:70px;
+  color:#f1f2f3;
   margin: 0;
   width: 100%;
+  font-size:14px;
+  font-weight:bold;
  }
  .custom .logo{
     width: 240px;
-    height:58px;  
+    height:60px;  
     margin: 2px 28px 2px 0;
     float: left;
     border-right:1px solid #ccc;
- }
- .custom .logo .title{
-   line-height:36px;
-   font-size:20px;
-   font-weight:bold;
-   color:#fff;
-   font-family: 'Times New Roman', Times, serif;
+    line-height:60px;
+    font-size:25px;
+    font-weight:bold;
+    color:#fff;
+    font-family: 'Times New Roman', Times, serif;
   }
  .custom .logo .company{
    line-height:16px;
@@ -157,3 +158,82 @@ body{
 .rdw-editor-toolbar{
   border:1px solid #e1e1e1;
 }
+
+.custom .ant-layout-footer{
+  background:#A7C0E0;
+}
+.custom .ant-table{
+  color: #000000;
+  font-family:'宋体';
+}
+.zebra_area{
+    box-sizing:border-box;
+  -moz-box-sizing:border-box; /* Firefox */
+  -webkit-box-sizing:border-box; /* Safari */
+    border-bottom: 3px solid #ABD8F9;
+    border-top: 1px solid #ABD8F9;
+    padding: 1px;
+    width: 100%;
+    background:#ABD8F9;
+    margin:0;
+    font-weight:700;
+    font-size:14px;
+    color:#031f33;
+    height:42px;
+    padding-left:80px;
+    line-height:38px;
+
+}
+.UserWelcome{
+    width:100px;
+    background:url(../img/user.gif) no-repeat 0 12px;
+    padding-left:20px;
+    float: right;
+    color: #B3E1FF;
+    font-family: "宋体";
+    font-size: 12px;
+    height: 25px;
+    margin-right: 20px;
+}
+.custom .table_tial{
+  border-bottom: 2px solid #A4CDEC;
+  border-top: 2px solid #A4CDEC;
+  height: 32px;
+  width: 100%;
+  padding-top: 4px;
+  background-image: url(../img/TableTail_bg.png);
+  background-repeat: repeat-x;
+}
+.FunctionButton {
+  /* background-image: url(img/button_bg.png); */
+  background-repeat: repeat-x;
+  float: left;
+  height: 22px;
+  font-size: 12px;
+  border: 1px solid #84A5C6;
+  margin: 0;
+  margin-left: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 3px;
+}
+a:hover {
+  color: #0000ff;
+  text-decoration: underLine;
+}
+
+.steps-content {
+  margin-top: 16px;
+  border: 1px dashed #e9e9e9;
+  border-radius: 6px;
+  background-color: #fafafa;
+  min-height: 200px;
+  text-align: center;
+  padding-top: 80px;
+}
+
+.steps-action {
+  margin-top: 24px;
+  text-align: right;
+}
+ 
